2009-02-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, -setObjectValue:): Try to fix
	bugs in last change.

2009-02-15 22:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOpenPanel.m: Corrects bug #25471.  Only enable
	the OK button when a file the application can open is selected.

2009-02-15 19:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Change to implement 10.3 and later behavior for
	the method setStringValue: as documented in Apple's documentation
	for the method.  This behavior was observed on Cocoa under 
	Mac OS 10.5.

2009-02-12 Riccardo Mottola <rmottola@users.sf.net>
	
	* Source/NSSavePanel.m: Return autoreleased copy of the directory
	string

2009-02-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Fix error parsing CFBundleURLTypes

2009-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Check applications for CFBundleURLTypes
	(see http://developer.apple.com/documentation/MacOSX/conceptual/BPRuntimeConfig/Articles/PListKeys.html)
	* Source/NSWorkspace.m: ([-openURL:]) try to open non-file URLs using
	an app found based on CFBundleURLTypes, and if that fails try to use
	any available 'OpenURL' service.

2009-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: Fix typo in include
	* Source/NSTableView.m: Fix to compile with GC (reported by Lu Liyi)

2009-02-11 00:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: 
	-[NSNibOutletConnector establishConnection] report exceptions when
	establishing a connection, but don't fail to load.  

2009-02-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h: Add method
	_setCustomizationPaletteIsRunning:. 
	* Source/NSToolbar.m: (-runCustomizationPalette:): Code to run
	customization palette.
	* Source/NSToolbarItem.m (-copyWithZone:): Try to copy the view.
	* Source/GSToolbarCustomizationPalette.h